test/tests/stages/17_supporting_dynamic_memory_allocation/invalid_types/scalar_expressions/not_void.parse
-- Lexing ... OK
-- Parsing ... OK
+
+
@@ C AST @@
CProgram: 
  List[3]: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: f
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: g
        List[0]: 
        None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Void: 
        None: 
    CFunDecl: 
      CFunctionDeclaration: 
        TIdentifier: main
        List[0]: 
        CB: 
          List[1]: 
            CS: 
              CReturn: 
                CUnary: 
                  CNot: 
                  CConditional: 
                    CConstant: 
                      CConstInt: 
                        TInt: 1
                      None: 
                    CFunctionCall: 
                      TIdentifier: f
                      List[0]: 
                      None: 
                    CFunctionCall: 
                      TIdentifier: g
                      List[0]: 
                      None: 
                    None: 
                  None: 
        FunType: 
          TULong: 67108864
          TULong: 67108864
          List[0]: 
          Int: 
        None: 
